# H5TurboPFor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_deps.sh  py-example.py  pyproject.toml  setup.sh  turbopfor_h5plugin.c
tests/: benchmark_nc_conversion.py  test_compression.py
