[project]
name = "turbopfor"
version = "0.1.0"
description = "Experimental HDF5 filter plugin using TurboPFor and Open-Meteo Delta encoding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5netcdf>=1.7.3",
    "h5py>=3.15.1",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "requests>=2.32.5",
]
